fixed z-index of title

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -217,7 +217,7 @@
     border: solid #FFFFFF 3px;
     text-align: center;
     position: absolute;
-    z-index: 1000;
+    z-index: 50;
     padding-top: 2em;
     padding-bottom: 2em;
     top: 26%;
